# zammadkb2mkdocs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: autoversion.yml
src/zammadkb2mkdocs/: __init__.py  cli.py  config.py  convert.py  db.py  export.py  images.py  pgsql2sqlite.py
