# SPDX-FileCopyrightText: Thomas Breitner
#
# SPDX-License-Identifier: EUPL-1.2

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "zammadkb2mkdocs"
dynamic = ["version"]
description = "Exports a Zammad Knowledge Base to MkDocs"
authors = [{name = "Thomas Breitner", email = "mail@thms.de"}]
license = {file = "EUPL-1.2"}
readme = "README.md"
keywords = ["zammad", "mkdocs", "knowledge base"]
requires-python = ">=3.9"
dependencies = [
    "markdownify",
    "python-frontmatter",
    # mkdocs only for previewing the result
    "mkdocs",
    "mkdocs-material",
    "mkdocs-static-i18n",
]

[project.urls]
Repository = "https://github.com/tombreit/zammadkb2mkdocs"
Issues = "https://github.com/tombreit/zammadkb2mkdocs/issues"

[project.scripts]
zammadkb2mkdocs = "zammadkb2mkdocs.cli:main"
